<resources>
    <string name="app_name">Unsplash</string>
    <string name="home">Home</string>
    <string name="collection">Collection</string>
    <string name="favorite">Favorite</string>
    <string name="saturation">Saturation</string>
    <string name="contrast">Contrast</string>
    <string name="warmth">Warmth</string>
    <string name="views">Views</string>
    <string name="downloads">Downloads</string>
    <string name="likes">Likes</string>
    <string name="text_loading">Loading…</string>
    <string name="title">Title</string>
    <string name="counter_photo">%s Photos</string>
    <string name="search_hint">Search</string>
    <string name="unlock_scroll_view">Unlock Scroll View</string>
    <string name="lock_scroll_view">Lock Scroll View</string>
    <string name="rate_limit_exceeded">Rate Limit Exceeded</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="text_load_success">Download Success</string>
</resources>
