<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewDetail"
            onLoadImage="@{photoDetail.urlPhoto.thumb}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewDetail"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@color/gray_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewDetail" />

        <View
            android:id="@+id/viewShow"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@color/gray_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBarWarmth" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_download"
            app:layout_constraintBottom_toBottomOf="@id/cardViewDetail"
            app:layout_constraintEnd_toStartOf="@id/imageButtonFavorite"
            app:layout_constraintTop_toBottomOf="@id/imageViewDetail"
            app:layout_constraintTop_toTopOf="@id/cardViewDetail" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonCrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_crop"
            app:layout_constraintBottom_toBottomOf="@id/cardViewDetail"
            app:layout_constraintEnd_toStartOf="@id/imageButtonDownload"
            app:layout_constraintTop_toBottomOf="@id/imageViewDetail"
            app:layout_constraintTop_toTopOf="@id/cardViewDetail" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonDraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_draw"
            app:layout_constraintBottom_toBottomOf="@id/cardViewDetail"
            app:layout_constraintEnd_toStartOf="@id/imageButtonCrop"
            app:layout_constraintTop_toBottomOf="@id/imageViewDetail"
            app:layout_constraintTop_toTopOf="@id/cardViewDetail" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/imageButtonFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_favorite"
            app:layout_constraintBottom_toBottomOf="@id/cardViewDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewDetail"
            app:layout_constraintTop_toTopOf="@id/cardViewDetail" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewBack"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarSaturation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:elevation="@dimen/_10sdp"
            android:max="100"
            android:progress="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textSaturation" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarContrast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:elevation="@dimen/_10sdp"
            android:max="100"
            android:progress="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textContrast" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarWarmth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:elevation="@dimen/_10sdp"
            android:max="100"
            android:progress="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textWarmth" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewAuthorAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@id/cardViewDetail"
            app:layout_constraintStart_toEndOf="@id/cardViewDetail"
            app:layout_constraintTop_toTopOf="@id/cardViewDetail" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textSaturation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/saturation"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewDetail" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textContrast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/contrast"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBarSaturation" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textWarmth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/warmth"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seekBarContrast" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewViews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/views"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            app:layout_constraintEnd_toStartOf="@id/textViewDownloads"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewShow" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewViewsData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@{photoDetail.views.toString()}"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@id/textViewViews"
            app:layout_constraintStart_toStartOf="@+id/textViewViews"
            app:layout_constraintTop_toBottomOf="@+id/textViewViews" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewDownloads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/downloads"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewShow" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewDownloadsData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@{photoDetail.downloads.toString()}"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@id/textViewDownloads"
            app:layout_constraintStart_toStartOf="@+id/textViewDownloads"
            app:layout_constraintTop_toBottomOf="@+id/textViewDownloads" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/likes"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewDownloads"
            app:layout_constraintTop_toBottomOf="@id/viewShow" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewLikeData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@{photoDetail.likes.toString()}"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@id/textViewLikes"
            app:layout_constraintStart_toStartOf="@+id/textViewLikes"
            app:layout_constraintTop_toBottomOf="@+id/textViewLikes" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDetail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_16sdp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewDetail"
            app:layout_constraintWidth_percent="0.07">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewAuthorAvatar"
                onLoadImage="@{photoDetail.authorInformation.avatar.smallAvatar}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.cardview.widget.CardView>

        <include
            android:id="@+id/progressLayout"
            layout="@layout/loader_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="photoDetail"
            type="com.example.unsplash.data.model.PhotoDetail" />
    </data>
</layout>
